semi final look

--- a/index.html
+++ b/index.html
@@ -57,9 +57,114 @@
             <img src="./logos/Target.svg" alt="" class="company-icons">
             <img src="./logos/Walmart.svg" alt="" class="company-icons">
         </section>
+        <section class="collection">
+            <h3>Popular Products</h3>
+            <div class="collection-cards">
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-head">Flex Tripod</h3>
+                    <h5 class="collection-prize">$50.48</h5>
+                    <p class="collection-rating">4.99</p>
+                    <p>Wordwide shifting
+                         <br> available <br>
+                        Buyers protection possible!</p>
+                </div>            
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-head">Flex Tripod</h3>
+                    <h5 class="collection-prize">$50.48</h5>
+                    <p class="collection-rating">4.99</p>
+                    <p>Wordwide shifting
+                         <br> available <br>
+                        Buyers protection possible!</p>
+                </div>            
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-head">Flex Tripod</h3>
+                    <h5 class="collection-prize">$50.48</h5>
+                    <p class="collection-rating">4.99</p>
+                    <p>Wordwide shifting
+                         <br> available <br>
+                        Buyers protection possible!</p>
+                </div>            
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-head">Flex Tripod</h3>
+                    <h5 class="collection-prize">$50.48</h5>
+                    <p class="collection-rating">4.99</p>
+                    <p>Wordwide shifting
+                         <br> available <br>
+                        Buyers protection possible!</p>
+                </div>            
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-head">Flex Tripod</h3>
+                    <h5 class="collection-prize">$50.48</h5>
+                    <p class="collection-rating">4.99</p>
+                    <p>Wordwide shifting
+                         <br> available <br>
+                        Buyers protection possible!</p>
+                </div>            
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-head">Flex Tripod</h3>
+                    <h5 class="collection-prize">$50.48</h5>
+                    <p class="collection-rating">4.99</p>
+                    <p>Wordwide shifting
+                         <br> available <br>
+                        Buyers protection possible!</p>
+                </div>            
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-head">Flex Tripod</h3>
+                    <h5 class="collection-prize">$50.48</h5>
+                    <p class="collection-rating">4.99</p>
+                    <p>Wordwide shifting
+                         <br> available <br>
+                        Buyers protection possible!</p>
+                </div>            
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-head">Flex Tripod</h3>
+                    <h5 class="collection-prize">$50.48</h5>
+                    <p class="collection-rating">4.99</p>
+                    <p>Wordwide shifting
+                         <br> available <br>
+                        Buyers protection possible!</p>
+                </div>            
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-head">Flex Tripod</h3>
+                    <h5 class="collection-prize">$50.48</h5>
+                    <p class="collection-rating">4.99</p>
+                    <p>Wordwide shifting
+                         <br> available <br>
+                        Buyers protection possible!</p>
+                </div>            
+            </div>
+        </section>
+        <div class="feature">
+          <div class="feature-img">
+            <img src="images/gear.png" alt="">
+          </div>
+          <div class="feature-con">
+            <h3 class="feature-title">Featured products at one place</h3>
+            <h5 class="feature-dis">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</h5>
+            <button class="banner-btn">Join Now</button>
+          </div>
+        </div>
     </main>
     <footer>
-
+        <div class="foot">
+            <h3 class="footer-title">Influencer products</h3>
+            <h5 class="footer-dis">Copyright © 2020  influencer products <br> All rights reserved</h5>
+            <div class="foot-icons">
+                <i class="ri-instagram-line"></i>
+                <i class="ri-dribbble-fill"></i>
+                <i class="ri-twitter-x-fill"></i>
+                <i class="ri-youtube-line"></i>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
